<resources>
    <string name="app_name">LocationMonitor</string>
    <string name="startservice">StartService</string>
    <string name="stopservice">StopService</string>
    <string name="coordinates">Coordinates</string>
    <string name="start">start</string>
    <string name="stop">stop</string>
    <string name="view">View</string>
    <string name="id">id</string>
    <string name="delete">delete</string>
    <string name="normalized_data">Normalized_Data</string>
    <string name="title_activity_maps">Map</string>
    <string name="show_on_map">Map</string>
    <string name="go">Go</string>
    <string name="mark">Mark</string>
    <string name="sat">Sat</string>
    <string name="clear">Clear</string>
    <string name="location">Location</string>
    <string name="todo">TODO</string>
    <string name="textview1">textview</string>
    <string name="textview2">textview</string>
    <string name="title_activity_graph">GraphActivity</string>
    <string name="Date">Date</string>
    <string name="Name">ITimer</string>
    <string name="date">DATE</string>

</resources>
