<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:srcCompat="@mipmap/ic_launcher" android:contentDescription="@string/todo" />
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_locality"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textview1"
            android:textColor="@color/common_google_signin_btn_text_light"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_snippet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/common_google_signin_btn_text_light"
            android:text="@string/textview2" />

    </LinearLayout>
    
</LinearLayout>