<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="5"
        android:id="@+id/linearLayout">

        <EditText
            android:id="@+id/etLocationEntry"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:hint="@string/location"
            android:inputType="" />

        <Button
            android:id="@+id/btSearch"
            android:onClick="geoLocate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/go" />


    </LinearLayout>


    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:map="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/linearLayout"
        tools:context="com.example.ankit.locationmonitor.MapsActivity"
        tools:layout="@android:layout/activity_list_item" />

    <Button
        android:id="@+id/btMark"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:text="@string/mark" />

    <Button
        android:id="@+id/btSatellite"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/zcZoom"
        android:layout_toStartOf="@+id/btMark"
        android:text="@string/sat" />

    <Button
        android:id="@+id/btClear"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toStartOf="@+id/btSatellite"
        android:text="@string/clear" />

    <ZoomControls
        android:id="@+id/zcZoom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btMark"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/bt_date"
        android:layout_marginRight="2dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toStartOf="@+id/btClear"
        android:text="Date" />


</RelativeLayout>